# faiss

./: CMakeLists.txt  setup_dev.sh
benchs/: bench_1b_hnsw.py  bench_gpu_1bn.py
